getGroupedHomeworksToCheck method updated